<resources>
    <string name="app_name">RestUp</string>
    <string name="open">Abir</string>
    <string name="close">Cerrar</string>
    <string name="SignUp">Resgistrarse</string>
    <string name="Login">Iniciar Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="credenciales">Usuario: Grupo9   contraseña:123456</string>
    <string name="fecha">Fecha</string>
    <string name="SolicitudCredenciales">Por favor, ingrese sus credenciales</string>
    <string name="Reserva">Reservas</string>
    <string name="Menu">Menú</string>
    <string name="Promociones">Promociones</string>
    <string name="BuscarPlato">Buscar por plato</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="btnSalir">Salir</string>
    <string name="btnCerrarSesion">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>