<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    tools:context=".loginActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gray"
            android:gravity="center"
            android:text="@string/credenciales"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/rest_up_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="@string/SolicitudCredenciales" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:autofillHints=""
            android:background="@drawable/button_run"
            android:gravity="center"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/Gray2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_run"
            android:gravity="center"
            android:hint="@string/password"
            android:imeActionLabel="SIgn_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/Gray2"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_dark_style"
            android:text="@string/SignUp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_dark_style"
            android:text="@string/Login"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>