<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaPromociones">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_marginEnd="12dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/rest_up_logo"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/app_name"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/txtBusqueda"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:autofillHints=""
        android:background="@drawable/button_run"
        android:hint="@string/BuscarPlato"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBuscar"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.025" />


    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_dark_style"
        android:onClick="consultarDescripcion"
        android:text="@string/btnBuscar"
        android:textColor="@drawable/btn_dark_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/txtBusqueda"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/btnNuevo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/btn_dark_style"
        android:onClick="abrirNuevaPromo"
        android:text="@string/btnNuevo"
        android:textColor="@drawable/btn_dark_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSalir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBusqueda"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_dark_style"
        android:text="@string/btnSalir"
        android:textColor="@drawable/btn_dark_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@id/btnNuevo"
        app:layout_constraintTop_toBottomOf="@id/btnBuscar"
        app:layout_constraintVertical_bias="0.025" />


    <ListView
        android:id="@+id/lstPromo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNuevo" />


</androidx.constraintlayout.widget.ConstraintLayout>